# pg-mcp-server

./: .env.example  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
internal/docs/: agent-instructions.md
internal/specs/: prd.md
specs/: PRD.md
src/pg_mcp_server/: __init__.py  __main__.py  config.py  errors.py  server.py
src/pg_mcp_server/database/: __init__.py  engine.py  queries.py  relationships.py  schema.py
src/pg_mcp_server/models/: __init__.py  relationships.py  results.py  schema.py
src/pg_mcp_server/tools/: __init__.py  query_tools.py  relationship_tools.py  schema_tools.py
tasks/: PRD.tasks.json
tests/: __init__.py  conftest.py  test_cli.py  test_engine.py  test_query_tools.py  test_relationship_tools.py  test_schema_tools.py
